--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- nav -->
 
-    <section class="max-w-screen-xl mx-auto border-[2px] border-[#d8d647]">
+    <section class="max-w-screen-xl mx-auto ">
 
         <!-- monitor -->
         <div class="hidden md:block">
@@ -44,16 +44,16 @@
         
         <!-- mobile -->
 
-        <div class="md:hidden border-[2px] border-[red]">
+        <div class="md:hidden ">
 
-            <div class="flex justify-between border-[5px] border-[#46bb3c]">
+            <div class="flex justify-between ">
 
-                <div class="flex  items-center gap-2  border-[2px] border-[red]">
+                <div class="flex  items-center gap-2 ">
                     <img class="" src="./images/Pern Logo.svg" alt="" srcset="">
                     <p class="font-bold">PERN <span class="text-[#6172F3]">Stack</span> </p>
                 </div>
 
-                <div class="dropdown border-[10px] border-[#4444e3]">
+                <div class="dropdown border-[10px]">
                     
                     <label tabindex="0" class="btn "><img src="./images/menu-01.svg" alt="" srcset=""></label>
                     <ul tabindex="0" class="dropdown-content z-[1]  p-2   rounded-box   ">
@@ -76,7 +76,7 @@
     </section>
 
     <!-- banner -->
-    <section class="max-w-screen-xl mx-auto border-[2px] border-[red] mt-[70px]">
+    <section class="max-w-screen-xl mx-auto  mt-[70px]">
         <p class="text-[60px] font-bold text-center">
             Empowering Web Developers:
             <br>
@@ -98,7 +98,7 @@
     </section>
 
     <!-- Simple, transparent pricing -->
-    <section class="max-w-screen-xl mx-auto border-[2px] border-[red] mt-[100px]">
+    <section class="max-w-screen-xl mx-auto  mt-[100px]">
 
         <p class="font-bold text-[30px] ml-[10px]">
             Simple, transparent pricing
@@ -232,7 +232,7 @@
 
     <!--Elevate Your Web Development Skills to New Heights  -->
 
-    <section class="max-w-screen-xl mx-auto border-[2px] border-[red] mt-[100px]">
+    <section class="max-w-screen-xl mx-auto  mt-[100px]">
 
         <div class="flex flex-col lg:flex-row gap-10">
 
@@ -284,7 +284,7 @@
 
     <!-- Empowering Developers from Day One -->
 
-    <section class="max-w-screen-xl mx-auto border-[2px] border-[red] mt-[100px]">
+    <section class="max-w-screen-xl mx-auto  mt-[100px]">
 
         <p class="font-bold text-[30px] ml-[10px]">
             Empowering Developers from Day One
@@ -369,7 +369,7 @@
 
     <!-- Chat to our friendly team -->
 
-    <section class="max-w-screen-xl mx-auto border-[2px] border-[red] mt-[100px]">
+    <section class="max-w-screen-xl mx-auto  mt-[100px]">
 
         <div class=" flex flex-col lg:flex-row ml-[15px]">
             <div class="flex-1">
@@ -422,14 +422,14 @@
 
     <!-- footer -->
 
-    <section class="bg-black text-white mx-auto">
-        <div class="max-w-screen-xl mx-auto  border-[2px] border-[red] mt-[100px]">
+    <section class="bg-black text-white mx-auto mt-[50px] pb-[30px]">
+        <div class="max-w-screen-xl mx-auto  pt-[30px]">
 
             <div class="flex mx-auto justify-center items-center gap-4 mt-[50px]">
                 <img class="" src="./images/Pern Logo.svg" alt="" srcset="">
                 <p>PERN <span class="text-[#6172F3]">Stack</span> </p>
             </div>
-            <div class="flex justify-center gap-[10px] mt-[30px]">
+            <div class="flex justify-center gap-[10px] mt-[20px]">
                 <p>Home</p>
                 <p>About</p>
                 <p>Pricing</p>
